# RingPing

./: .env.example  .gitignore  README.md  build-ringping-headless.ps1  build-ringping-watchdog.ps1  build-ringping.ps1  pyproject.toml  start-ringping-headless.bat  start-ringping-watchdog.bat  start-ringping.bat
config/: projects.example.json  projects.json
docs/: ringcentral-setup.md
ringping/: __init__.py  __main__.py  app.py  codex_runner.py  config.py  controller.py  email_notifier.py  git_ops.py  headless.py  launcher.py  models.py  poller.py  release_monitor.py  ringcentral.py  single_instance.py  storage.py  ui.py  utils.py  watchdog.py  webhook.py  worker.py
